@@ -66,5 +66,5 @@
     "pdf"
   ],
   "test-depends" : [ ],
-  "version" : "0.2.8"
+  "version" : "0.3.0"
 }
